/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package media.audiotestharness;

option java_package = "com.android.media.audiotestharness.proto";

// The device-host Audio Test Harness service that allows devices-under-test to
// access audio devices on the host as if they were local device. This allows
// for capture and playback by the DUT using external, independent devices on
// the test host.
service AudioTestHarness {
  // Initiates a capture from a host audio device and streams back the resulting
  // raw audio samples to the device.
  rpc Capture(CaptureRequest) returns (stream CaptureChunk) {}
}

// A request from the client to start a new capture.
//
// If the capture is started successfully, the host will return a series of
// CaptureChunks containing raw sample data.
message CaptureRequest {}

// A chunk of capture data sent by the host to the client.
message CaptureChunk {
  // The raw audio data that has been captured.
  bytes data = 1;
}